Minor statistics improvements.